test/classes/initializers/postInit/args.good
args.chpl:3: error: postinit must have zero arguments
